[package]
name = "formulafix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
mongodb = "2.3.1"
serde = "1.0.148"
serde_json = "1.0.89"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

